grammars/gwbasic/test/corpus/expressions.txt
================
Integer arithmetic
================
10 PRINT 2+3

---

(program
  (line
    (line_number)
    (statement_list
      (statement
        (print_statement
          (print_list
            (print_item
              (expression
                (binary_expression
                  (expression
                    (primary_expression
                      (literal
                        (integer_literal))))
                  (expression
                    (primary_expression
                      (literal
                        (integer_literal)))))))))))))

================
String variable assignment
================
10 A$="HELLO"

---

(program
  (line
    (line_number)
    (statement_list
      (statement
        (let_statement
          (variable
            (identifier)
            (type_sigil))
          (expression
            (primary_expression
              (literal
                (string_literal)))))))))

================
Relational expression
================
10 IF A<>B THEN 100

---

(program
  (line
    (line_number)
    (statement_list
      (statement
        (if_statement
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (variable
                    (identifier))))
              (expression
                (primary_expression
                  (variable
                    (identifier))))))
          (line_number))))))

================
Parenthesized expression
================
10 X=(1+2)*3

---

(program
  (line
    (line_number)
    (statement_list
      (statement
        (let_statement
          (variable
            (identifier))
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (expression
                    (binary_expression
                      (expression
                        (primary_expression
                          (literal
                            (integer_literal))))
                      (expression
                        (primary_expression
                          (literal
                            (integer_literal))))))))
              (expression
                (primary_expression
                  (literal
                    (integer_literal)))))))))))
